--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,8 +24,8 @@ android {
         vectorDrawables.useSupportLibrary = true
         multiDexEnabled true
     }
-    sourceSets{
-        main{
+    sourceSets {
+        main {
             jniLibs.srcDir 'libs'
             //说明so的路径为该libs路径，关联所有地图SDK的so文件
         }
@@ -58,9 +58,9 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation 'com.squareup.okhttp3:okhttp:(insert latest version)'
-    implementation('com.github.gzu-liyujiang.AndroidPicker:WheelPicker:latest.release') {
-        exclude group: 'com.android.support'
-    }
+//        implementation('com.github.gzu-liyujiang.AndroidPicker:WheelPicker:latest.release') {
+//            exclude group: 'com.android.support'
+//        }
     implementation 'com.github.arcadefire:nice-spinner:1.3.3'
     testImplementation 'junit:junit:4.12'
     implementation project(':library:xrecyclerview')
@@ -75,7 +75,7 @@ dependencies {
     implementation 'io.reactivex:rxandroid:1.2.0'
     implementation 'com.nineoldandroids:library:2.4.0'
     implementation 'jp.wasabeef:glide-transformations:2.0.1'
-    implementation 'com.youth.banner:banner:1.4.2'
+        implementation 'com.youth.banner:banner:1.4.2'
     implementation 'com.daimajia.slider:library:1.1.5@aar'
     implementation 'com.cocosw:bottomsheet:1.3.0@aar'
     implementation 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:+'
