--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.2'
+        classpath 'com.android.tools.build:gradle:3.1.3'
         
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -21,6 +21,9 @@ allprojects {
         google()
         jcenter()
         mavenCentral()
+//        maven {
+//            url "http://jcenter.bintray.com"
+//        }
         maven {
             url "https://www.jitpack.io"
         }
